fixing analytics + dropping IE

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <link rel="preload" href="./demo_assets/fonts/paytone-one-v18-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="./demo_assets/fonts/nunito-v25-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="./demo_assets/fonts/fira-mono-v14-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
-    <script async defer data-website-id="f221953d-158e-46c9-88d1-3b05df00997a" src="./demo_assets/js/a.min.js" data-host-url="https://a.tz.add-to-calendar-technology.com" data-domains="tz.add-to-calendar-technology.com"></script>
+    <script async defer data-website-id="f221953d-158e-46c9-88d1-3b05df00997a" src="./demo_assets/js/a.min.js" data-host-url="https://a.add-to-calendar-button.com" data-domains="tz.add-to-calendar-technology.com"></script>
 
     <!-- load some basic css just for this demo page here -->
     <link rel="stylesheet" href="./demo_assets/css/demopage.min.css?v=1.0.0">
