--- a/index.html
+++ b/index.html
@@ -96,10 +96,17 @@
 
     <div class="container">
 
-      <h3>Lorem ipsum</h3>
+      <h3>iCal Timezone information for Javascript</h3>
       <p class="description">
-        Lorem ipsum
+        This tool converts the most recent IANA (formerly Olson) timezone database files into VTIMEZONE blocks, which are compatible with the iCalendar specification (RFC2445).<br>
+        In an easy to use way for every Javascript project; may it be VanillaJS, React, Angular, Vue, Svelte, or based on any other framework or library.
       </p>
+      
+      <h3>Give it a try!</h3>
+
+    </div>
+    <div class="example-wrapper">
+
       <div class="example">
         <div class="tz-input-wrapper">
           <div id="autocomplete" class="autocomplete">
@@ -114,6 +121,9 @@
           <pre><code id="tz-output">Please select a timezone above...</code></pre>
         </div>
       </div>
+
+    </div>
+    <div class="container">
 
       <hr>
 
