--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <script async defer data-website-id="f221953d-158e-46c9-88d1-3b05df00997a" src="./demo_assets/js/a.min.js" data-host-url="https://a.add-to-calendar-button.com" data-domains="tz.add-to-calendar-technology.com"></script>
 
     <!-- load some basic css just for this demo page here -->
-    <link rel="stylesheet" href="./demo_assets/css/demopage.min.css?v=1.0.0">
+    <link rel="stylesheet" href="./demo_assets/css/demopage.min.css?v=1.2.0">
 
   </head>
   <body itemscope itemtype="http://schema.org/WebSite">
@@ -94,7 +94,7 @@
       <h3>iCal Timezone information for Javascript</h3>
       <p class="description">
         This tool converts the most recent IANA (formerly Olson) timezone database files into VTIMEZONE blocks, which are compatible with the iCalendar specification (RFC2445).<br>
-        In an easy to use way for every Javascript project; may it be VanillaJS, React, Angular, Vue, Svelte, or based on any other framework or library.
+        It is optimized to be easily used in every Javascript project; may it be VanillaJS, React, Angular, Vue, Svelte, or based on any other framework or library.
       </p>
       
       <h3>Give it a try!</h3>
@@ -162,15 +162,15 @@
           This page is hosted via "GitHub Pages". It includes some very basic analytics, that still preserves your anonymity and does not use any cookies. However, mind that the GitHub privacy policy applies additionally (<a target="_blank" rel="noopener" href="https://docs.github.com/en/github/site-policy/github-privacy-statement">click here for details</a>).
         </p>
       </div>
-      <div id="tiny-version">v1.0.0</div>
+      <div id="tiny-version">v1.2.0</div>
 
     </div>
 
 
     <!-- js stuff -->
-    <script type="application/javascript" src="./dist/tzlib.min.js?v=1.0.0"></script>
+    <script type="application/javascript" src="./dist/tzlib.min.js?v=1.2.0"></script>
     <script type="application/javascript" src="./demo_assets/js/autocomplete.min.js"></script>
-    <script type="application/javascript" src="./demo_assets/js/demopage.min.js?v=1.0.0"></script>
+    <script type="application/javascript" src="./demo_assets/js/demopage.min.js?v=1.2.0"></script>
 
   </body>
 </html>
