--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <link rel="dns-prefetch" href="https://a.add-to-calendar-button.com/">
     <link rel="dns-prefetch" href="https://caldn.net/">
     <link rel="preload" href="https://tz.add-to-calendar-technology.com/demo_assets/fonts/inter-v12-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <script async defer data-website-id="f221953d-158e-46c9-88d1-3b05df00997a" src="./demo_assets/js/a.min.js" data-host-url="https://a.add-to-calendar-button.com" data-domains="tz.add-to-calendar-technology.com"></script>
 
     <!-- load some basic css just for this demo page here -->
