--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       </p>
       <pre><code>BEGIN:VCALENDAR
 VERSION:2.0
-PRODID:-// github.com/add2cal/add-to-calendar-button // atcb v1.14.6 //EN
+PRODID:-// github.com/add2cal/add-to-calendar-button //EN
 CALSCALE:GREGORIAN
 
 <strong>BEGIN:VTIMEZONE
