demo rich data update

--- a/index.html
+++ b/index.html
@@ -58,8 +58,19 @@
     <link rel="stylesheet" href="./demo_assets/css/demopage.min.css?v=1.2.1">
 
   </head>
-  <body itemscope itemtype="http://schema.org/WebSite">
-    <link itemprop="url" href="https://tz.add-to-calendar-technology.com"/>
+  <body>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "url": "https://tz.add-to-calendar-technology.com",
+        "image": [
+          "https://tz.add-to-calendar-technology.com/demo_assets/img/1×1.png",
+          "https://tz.add-to-calendar-technology.com/demo_assets/img/4×3.png",
+          "https://tz.add-to-calendar-technology.com/demo_assets/img/16×9.png"
+        ]
+      }
+    </script>
 
     <div id="header">
       <div id="header-left">
