--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ END:VCALENDAR</code></pre>
 
 
     <!-- js stuff -->
-    <script type="application/javascript" src="./dist/tzlib.min.js?v=1.5.0"></script>
+    <script type="application/javascript" src="./dist/tzlib.js?v=1.5.0"></script>
     <script type="application/javascript" src="./demo_assets/js/autocomplete.min.js"></script>
     <script type="application/javascript" src="./demo_assets/js/demopage.min.js?v=1.5.0"></script>
 
