--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <link rel="dns-prefetch" href="https://caldn.net/">
     <link rel="preload" href="https://tz.add-to-calendar-technology.com/demo_assets/fonts/inter-v12-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
-    <script async defer data-website-id="f221953d-158e-46c9-88d1-3b05df00997a" src="./demo_assets/js/a.min.js" data-host-url="https://a.add-to-calendar-button.com" data-domains="tz.add-to-calendar-technology.com"></script>
+    <script async defer data-website-id="df493802-c6d9-49f5-aa67-245f472f5a8e" src="https://a.add-to-calendar-button.com/atcba.js" data-host-url="https://a.add-to-calendar-button.com" data-domains="tz.add-to-calendar-technology.com" data-do-not-track="true"></script>
 
     <!-- load some basic css just for this demo page here -->
     <link rel="stylesheet" href="./demo_assets/css/demopage.min.css?v=1.6.1">
