legal notice update

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ END:VCALENDAR</code></pre>
           <div></div>
         </button>
         <p>
-          This page has been built and is maintained by Jens K&uuml;rschner. See <a target="_blank" rel="noopener" href="https://jenskuerschner.de/legal-notice/">jenskuerschner.de/legal-notice</a> for a full legal notice.<br>
+          This page has been built and is maintained by the team behind the "Add to Calendar Button". See <a target="_blank" rel="noopener" href="https://add-to-calendar-button.com/legal-notice">add-to-calendar-button.com/legal-notice</a> for a full legal notice.<br>
           This page is hosted via "GitHub Pages". It includes some very basic analytics, that still preserves your anonymity and does not use any cookies. However, mind that the GitHub privacy policy applies additionally (<a target="_blank" rel="noopener" href="https://docs.github.com/en/github/site-policy/github-privacy-statement">click here for details</a>).
         </p>
       </div>
