--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ END:VCALENDAR</code></pre>
       <h4>Get a specific offset</h4>
       <p>
         Use `tzlib_get_offset(tzName, isoDate, isoTime)` to get specific offset (relative to UTC), based on a provided date and time.<br>
-        For example, you can provide *tzName* `'Europe/Berlin'`, *isoDate* `'2023-05-23'`, and *isoTime* `'15:45'` in order to retrieve the offset, which applies for this time zone at the 23rd of May in 2023 at exactly 15:45.
+        For example, you can provide <b>tzName</b> 'Europe/Berlin', <b>isoDate</b> '2023-05-23', and <b>isoTime</b> '15:45' in order to retrieve the offset, which applies for this time zone at the 23rd of May in 2023 at exactly 15:45.
       </p>
 
       <hr>
