--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     <meta name="twitter:description" content="The convenient way to directly access the most recent official time zone information for iCalendar files with JavaScript. Free and open source.">
     <meta name="twitter:image" content="https://tz.add-to-calendar-technology.com/demo_assets/img/tw.png">
 
-    <link rel="dns-prefetch" href="https://a.add-to-calendar-button.com/">
+    <link rel="dns-prefetch" href="https://a.add-to-calendar-pro.com/">
     <link rel="dns-prefetch" href="https://caldn.net/">
     <link rel="preload" href="https://tz.add-to-calendar-technology.com/demo_assets/fonts/inter-v12-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
-    <script async defer data-website-id="df493802-c6d9-49f5-aa67-245f472f5a8e" src="https://a.add-to-calendar-button.com/atcba.js" data-host-url="https://a.add-to-calendar-button.com" data-domains="tz.add-to-calendar-technology.com" data-do-not-track="true"></script>
+    <script async defer data-website-id="df493802-c6d9-49f5-aa67-245f472f5a8e" src="https://a.add-to-calendar-pro.com/atcba.js" data-host-url="https://a.add-to-calendar-pro.com" data-domains="tz.add-to-calendar-technology.com" data-do-not-track="true"></script>
 
     <!-- load some basic css just for this demo page here -->
     <link rel="stylesheet" href="./demo_assets/css/demopage.min.css?v=1.9.1">
